--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "fetch": "^1.1.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "node": "^14.2.0",
     "node-fetch": "^2.6.0",
-    "pug": "2.0.0-beta11",
-    "xmlhttprequest": "^1.8.0"
+    "pug": "2.0.0-beta11"
   }
 }
